2010-06-04  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] GtkLauncher should support relative file paths
        https://bugs.webkit.org/show_bug.cgi?id=39944

        Allow GtkLauncher to handle relative file paths passed via command-line arguments.

        * GtkLauncher/main.c:
        (filename_to_url): Added.
        (main): Try to resolve arguments as relative file URLs first.

2010-06-04  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] EventSender should call gtk_main_do_event instead of invoking signal handlers directly
        https://bugs.webkit.org/show_bug.cgi?id=40182

        Instead of invoking signal handlers directly via g_signal_emit_by_name, call
        gtk_main_do_event. This will allow us to call gtk_get_current_event() in WebKit
        without breaking DRT.

        * DumpRenderTree/gtk/EventSender.cpp:
        (dispatchEvent): Use gtk_main_do_event instead of invoking signal handlers directly.
        (keyDownCallback): Use dispatchEvent here which now uses gtk_main_do_event.

2010-06-04  Anders Carlsson  <andersca@apple.com>

        Reviewed by David Hyatt.

        Make the editing/spelling/context-menu-suggestions.html test more robust
        https://bugs.webkit.org/show_bug.cgi?id=40178

        Change the contextClick method to return an array of strings describing the context menu items.

        * DumpRenderTree/mac/EventSendingController.mm:
        (+[EventSendingController isSelectorExcludedFromWebScript:]):
        (+[EventSendingController webScriptNameForSelector:]):
        (-[EventSendingController contextClick]):

2010-06-03  Kinuko Yasuda  <kinuko@chromium.org>

        Reviewed by Shinichiro Hamaji.

        Clean up chromium-specific code from json_results_generator.py.
        https://bugs.webkit.org/show_bug.cgi?id=39665

        * Scripts/webkitpy/layout_tests/layout_package/json_layout_results_generator.py: